--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <script>
     const products = [
-      { id: 1, name: "قميص رجالي", price: 20,000, image: "https://via.placeholder.com/200" },
+      { id: 1, name: "قميص نسائي", price: 20,000, image: "https://via.placeholder.com/200" },
       { id: 2, name: "حقيبة نسائية", price: 45,000, image: "https://via.placeholder.com/200" },
       { id: 3, name: "ساعة يد", price: 75,000, image: "https://via.placeholder.com/200" }
     ];
