--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <script>
     const products = [
-  { id: 1, name: "قميص رجالي", price: 20000, image: "https://www.google.com/search?q=%D9%82%D9%85%D9%8A%D8%B5+%D8%B1%D8%AC%D8%A7%D9%84%D9%8A&oq=%D9%82%D9%85%D9%8A%D8%B5+%D8%B1%D8%AC%D8%A7%D9%84&gs_lcrp=EgZjaHJvbWUqBwgBEAAYgAQyBggAEEUYOTIHCAEQABiABDIHCAIQABiABDIHCAMQABiABDIHCAQQABiABDIHCAUQABiABDIHCAYQABiABDIHCAcQABiABDIHCAgQABiABDIHCAkQABiABDIHCAoQABiABDIHCAsQABiABDIHCAwQABiABDIHCA0QABiABDIHCA4QABiABNIBCDQ1MzZqMGo3qAIUsAIB8QUmmd8vqGCT3vEFJpnfL6hgk94&client=ms-android-transsion&sourceid=chrome-mobile&ie=UTF-8#vhid=A1j2mMdNgayyIM&vssid=_PwQeaMXpIc2rxc8P4tX9yAs_43" },
+  { id: 1, name: "قميص رجالي", price: 20000, image: "https://www.pexels.com/photo/man-walking-between-buildings-1762185/" },
   { id: 2, name: "حقيبة نسائية", price: 45000, image: "https://via.placeholder.com/200" },
   { id: 3, name: "ساعة يد", price: 75000, image: "https://via.placeholder.com/200" }
 ];
