--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <script>
     const products = [
-  { id: 1, name: "قميص رجالي", price: 20000, image: "https://www.pexels.com/photo/man-walking-between-buildings-1762185/" },
+  { id: 1, name: "قميص رجالي", price: 20000, image: "https://images.pexels.com/photos/1762185/pexels-photo-1762185.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" },
   { id: 2, name: "حقيبة نسائية", price: 45000, image: "https://via.placeholder.com/200" },
   { id: 3, name: "ساعة يد", price: 75000, image: "https://via.placeholder.com/200" }
 ];
